cabal-version:      3.6
name:               hithlain
version:            0.1.0.0
synopsis:           Blog generator using Hakyll/Haskell
description:        This is the blog generator behind the blog at
                    <https://mihai.page>. However, other users can also use
                    this if they so desire.

                    Consult the README.md file for more details.
homepage:           https://mihai.page  -- TODO: write article about the generator
license:            BSD-3-Clause
license-file:       LICENSE.md
author:             Mihai Maruseac
maintainer:         mihai.maruseac@gmail.com
copyright:          © 2023 Mihai Maruseac
category:           Web
build-type:         Simple
extra-doc-files:    README.md, CHANGELOG.md

common compile-options
  ghc-options: -O2 -threaded -Wall -Wcompat -Werror

executable hithlain
  import:           compile-options
  hs-source-dirs:   src
  main-is:          main.hs
  default-language: Haskell2010
  other-modules:
    , CLI
    , Compiler
    , Config
    , Diagrams
    , References
    , Rules
  build-depends:
    , base ^>= 4.16.4.0
    , aeson ^>= 2.1.1.0
    , diagrams-builder ^>= 0.8.0.5
    , diagrams-lib ^>= 1.4.5.1
    , diagrams-rasterific ^>= 1.4.2.2
    , filepath ^>= 1.4.2.1
    , hakyll ^>= 4.15.1.1
    , hashable ^>= 1.3.5.0
    , JuicyPixels ^>= 3.3.7
    , linear ^>= 1.21.10
    , optparse-applicative ^>= 0.16.1.0
    , palette ^>= 0.3.0.2
    , pandoc ^>= 2.19.2
    , pandoc-types ^>= 1.22.2.1
    , text ^>= 1.2.5.0
    , vector ^>= 0.12.3.1
    , yaml ^>= 0.11.8.0
