cabal-version:      3.6
name:               hithlain
version:            0.1.0.0
synopsis:           Blog generator using Hakyll/Haskell
description:        This is the blog generator behind the blog at
                    <https://mihai.page>. However, other users can also use
                    this if they so desire.

                    Consult the README.md file for more details.
homepage:           https://mihai.page  -- TODO: write article about the generator
license:            BSD-3-Clause
license-file:       LICENSE.md
author:             Mihai Maruseac
maintainer:         mihai.maruseac@gmail.com
copyright:          © 2023 Mihai Maruseac
category:           Web
build-type:         Simple
extra-doc-files:    README.md, CHANGELOG.md

common compile-options
  ghc-options: -O2 -threaded -Wall -Wcompat -Werror

executable hithlain
  import:           compile-options
  hs-source-dirs:   src
  main-is:          main.hs
  default-language: Haskell2010
  other-modules:
    , CLI
    , Compiler
    , Config
    , Diagrams
    , References
    , Rules
  build-depends:
    , base ^>= 4.19.2
    , aeson ^>= 2.2.3
    , diagrams-builder ^>= 0.8.0.6
    , diagrams-lib ^>= 1.5
    , diagrams-rasterific ^>= 1.5
    , filepath ^>= 1.4.301
    , hakyll ^>= 4.16.6
    , hashable ^>= 1.5
    , JuicyPixels ^>= 3.3.9
    , linear ^>= 1.23.2
    , optparse-applicative ^>= 0.19
    , palette ^>= 0.3.0.4
    , pandoc ^>= 3.7.0.2
    , pandoc-types ^>= 1.23.1
    , text ^>= 2.1.2
    , vector ^>= 0.13.2
    , yaml ^>= 0.11.11.2
